--- a/public/404.html
+++ b/public/404.html
@@ -21,19 +21,13 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-          var pathname = window.location.pathname;
-          window.location.replace('/' + pathname);
-          window.location.replace('/payment' + pathname);
-          window.location.replace('/schedules' + pathname);
-          window.location.replace('/beneficiaries' + pathname);
-          window.location.replace('/approvals' + pathname);
-          window.location.replace('/users' + pathname);
-          window.location.replace('/analytics' + pathname);
-          window.location.replace('/settings' + pathname);
-          window.location.replace('/error' + pathname);
-        
-        });
+       document.addEventListener('DOMContentLoaded', function() {
+  var pathname = window.location.pathname;
+  if (pathname !== "/") {
+    window.location.replace('/#' + pathname);
+  }
+});
+
       </script>
   </body>
 </html>
